--- a/backups/editor.html
+++ b/backups/editor.html
@@ -30,7 +30,7 @@
             </tr>
           </thead>
           <tbody class="max-h-[90%] overflow-y-auto pr-2">
-            <template x-for="item in listItems" :key="item.id">
+            <template x-for="item in invoiceBook" :key="item.id">
               <tr>
                 <td>
                   <button
