--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -3,12 +3,20 @@
   <!-- Top bar -->
   <div
     class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/40 dark:border-vls/40 dark:bg-vdp bg-white shadow">
-    <button @click="$store.clients.showClientModal = true" class="modal-btn-prim">
-      <svg class="size-4">
-        <use href="/icons/icons.svg#select-client" />
-      </svg>
-      Select Client
-    </button>
+    <div
+      @click="if ($store.edit.editing) { 
+              callWarning('Cannot change clients', 'Finish editing and try again'); 
+            } else { 
+              $store.clients.showClientModal = true;
+            }"
+      class="cursor-pointer">
+      <button
+        id="clientSelectBtn"
+        :disabled="$store.edit.editing"
+        class="modal-btn-prim disabled:opacity-50 disabled:pointer-events-none">
+        Select Client
+      </button>
+    </div>
     <h3
       class="self-center text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
       x-text="$store.clients.selectedClient.name || 'No selected client'"></h3>
@@ -26,7 +34,7 @@
       </div>
       <!-- Scrollable List -->
       <div class="flex-1 overflow-y-auto table-scrollbar p-2 invoice-book-scroll">
-        <template x-for="item in $store.edit.listItems" :key="item.id">
+        <template x-for="item in $store.edit.invoiceBook" :key="item.id">
           <div
             @click="$store.edit.fetchInvoice(item.id)"
             :id="'rowid-' + item.id"
@@ -64,7 +72,6 @@
                   <label
                     @click="$refs.switchButton.click(); $refs.switchButton.focus(); $event.stopPropagation()"
                     :id="$id('switch')"
-                    :class="{ 'text-blue-600': switchOn, 'text-gray-100': !switchOn }"
                     class="text-sm select-none"
                     x-cloak></label>
                 </div>
@@ -73,7 +80,8 @@
                 <div class="flex gap-4 items-center">
                   <div x-show="item && item.deposit_value > 0">
                     <div
-                      x-data="tooltip('Use this when the client has payed the deposit and \n you want to invoice them for the remaining amount.')">
+                      x-data="tooltip('Use after deposit payment to invoice \nthe remaining balance.\n Creates new invoice with related number \n(e.g., SAM-1 → SAM-1.1).')"
+                      class="">
                       <button class="table-interaction-icon-red hover:!text-vla" @click="$event.stopPropagation()">
                         <svg class="size-4">
                           <use href="/icons/icons.svg#cash-bill" />
@@ -88,6 +96,7 @@
                       Discount: ${item.discount_type === 1 ? item.discVal_ifPercent + '%' : '£' + item.discount_value}
                       Total: £${item.total}
                       Deposit: ${item.deposit_type === 1 ? item.depoVal_ifPercent + '%' : '£' + item.deposit_value}`)"
+                    @click="$event.stopPropagation()"
                     class="table-interaction-icon-blue">
                     <svg class="size-4">
                       <use href="/icons/icons2.svg#deets-ic" />
