--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -1,4 +1,4 @@
-<div x-data="editView" class="border border-vls/40 h-full ml-2 rounded p-2">
+<div x-data="editView" class="border border-vls/40 h-full ml-2 rounded p-2 shadow">
   <!-- When no invoice is selected or none is being edited -->
   <template x-if="!$store.edit.showInvoiceItems">
     <div
@@ -201,22 +201,22 @@
       <div class="mb-2 flex w-full justify-between rounded border border-vls/40 bg-vlp shadow dark:bg-vdp2 p-2">
         <!-- Client info -->
         <div class="w-full">
-          <p class="flex justify-between">
-            <span>Client name:</span>
-            <span x-text="$store.edit.invoiceItems.client?.name"></span>
-          </p>
-          <p class="flex justify-between">
-            <span>Company:</span>
-            <span x-text="$store.edit.invoiceItems.client?.company_name"></span>
-          </p>
-          <p class="flex justify-between">
-            <span>Address:</span>
-            <span x-text="$store.edit.invoiceItems.client?.address"></span>
-          </p>
-          <p class="flex justify-between">
-            <span>Email:</span>
-            <span x-text="$store.edit.invoiceItems.client?.email"></span>
-          </p>
+          <div class="flex justify-between w-full">
+            <p>Client name:</p>
+            <span x-text="$store.clients.selectedClient?.name"></span>
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Company:</p>
+            <span x-text="$store.clients.selectedClient?.company_name"></span>
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Address:</p>
+            <span x-text="$store.clients.selectedClient?.address"></span>
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Email:</p>
+            <span x-text="$store.clients.selectedClient?.email"></span>
+          </div>
         </div>
       </div>
 
@@ -419,6 +419,7 @@
                   <h3 class="mb-2 modal-title !text-lg !text-center">Discount</h3>
                   <div class="relative mb-3">
                     <input
+                      :id="'discount-input-edit'"
                       x-ref="discountInput"
                       type="number"
                       x-model.number="$store.edit.uiDiscount"
@@ -486,6 +487,7 @@
                   <h3 class="mb-2 modal-title !text-lg !text-center">Deposit</h3>
                   <div class="relative mb-3">
                     <input
+                      :id="'deposit-input-edit'"
                       x-ref="depoInput"
                       type="number"
                       x-model.number="$store.edit.uiDeposit"
@@ -569,6 +571,7 @@
                   </div>
                   <h3 class="mb-2 modal-title !text-lg !text-center">Note</h3>
                   <input
+                    :id="'note-input-edit'"
                     x-ref="noteInput"
                     type="text"
                     role="text"
@@ -726,6 +729,7 @@
                   <tr>
                     <th colspan="6" class="p-2">
                       <input
+                        id="search-items-dropdown"
                         type="text"
                         placeholder="Search items..."
                         class="!w-full px-2 py-1 srch-style"
@@ -791,6 +795,7 @@
           x-collapse.duration.300ms
           class="space-y-4 mb-6 flex flex-col">
           <input
+            :id="'style-edit-name-input'"
             x-model="$store.edit.newItem.name"
             @input="$store.edit.newItem.name = $store.edit.newItem.name.substring(0, 80)"
             type="text"
@@ -799,6 +804,7 @@
             class="p-2 bg-vlp border rounded focus:outline-none border-vls/40 focus:border-vls hover:border-vls shadow-sm dark:bg-vdp2 dark:focus:bg-vdp3 text-vls2 dark:text-vds placeholder:text-vls/60 hover:placeholder:text-vls dark:placeholder:text-vds/60" />
 
           <input
+            :id="'style-edit-price-input'"
             x-model.number="$store.edit.newItem.price"
             type="number"
             step="0.01"
@@ -808,6 +814,7 @@
             @blur="$store.edit.newItem.price = Alpine.store('price').roundToTwo($store.edit.newItem.price)" />
 
           <input
+            :id="'style-edit-quantity-input'"
             x-model.lazy="$store.edit.newItem.quantity"
             type="number"
             min="1"
@@ -824,6 +831,7 @@
           x-collapse.duration.300ms
           class="space-y-4 mb-6 flex flex-col">
           <input
+            :id="'sample-edit-name-input'"
             x-model="$store.edit.newItem.name"
             @input="$store.edit.newItem.name = $store.edit.newItem.name.substring(0, 80)"
             type="text"
@@ -832,6 +840,7 @@
             class="p-2 bg-vlp border rounded focus:outline-none border-vls/40 focus:border-vls hover:border-vls shadow-sm dark:bg-vdp2 dark:focus:bg-vdp3 text-vls2 dark:text-vds placeholder:text-vls/60 hover:placeholder:text-vls dark:placeholder:text-vds/60" />
 
           <input
+            :id="'sample-edit-price-input'"
             x-model.number="$store.edit.newItem.price"
             type="number"
             step="0.01"
@@ -841,6 +850,7 @@
             @blur="$store.edit.newItem.price = Alpine.store('price').roundToTwo($store.edit.newItem.price)" />
 
           <input
+            :id="'sample-edit-time-input'"
             x-model.number="$store.edit.newItem.time"
             type="number"
             step="0.01"
@@ -850,6 +860,7 @@
             @blur="$store.edit.newItem.time = Alpine.store('price').roundToTwo($store.edit.newItem.time)" />
 
           <input
+            :id="'sample-edit-quantity-input'"
             x-model.lazy="$store.edit.newItem.quantity"
             type="number"
             min="1"
