--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -147,7 +147,7 @@
         <!-- EDIT DISCOUNT DEPOSIT NOTE PDF-->
 
         <div
-          class="flex flex-col w-[70%] p-4 items-end justify-end bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40">
+          class="flex flex-col w-[70%] p-4 items-end justify-end bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow">
           <div
             class="w-full border border-vls/40 text-vls3 dark:text-vds rounded p-4 mb-4 flex-grow overflow-y-auto bg-white dark:bg-vdp shadow">
             <p x-text="'Note: ' + $store.edit.invoiceItems.invoice?.note" class="text-xs break-words"></p>
@@ -368,7 +368,7 @@
           </template>
         </div>
         <div
-          class="flex flex-col w-[70%] p-6 items-end justify-end bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40">
+          class="flex flex-col w-[70%] p-6 items-end justify-end bg-vlp rounded border-vls/40 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow">
           <!-- NOTE -->
           <div
             class="w-full border border-vls/40 text-vls3 dark:text-vds rounded p-2 mb-4 flex flex-col justify-between flex-grow overflow-y-auto bg-white dark:bg-vdp">
@@ -624,10 +624,9 @@
   <div
     x-show="$store.edit.openEditModal"
     x-transition.opacity.duration.300
-    class="fixed inset-0 z-20 bg-gray-800 bg-opacity-50">
-    <div
-      class="relative top-1/3 z-30 mx-auto w-1/3 rounded bg-vlp shadow-lg transition duration-300 dark:bg-zinc-900 border border-vls/40">
-      <div class="p-8 text-center">
+    class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50">
+    <div class="relative p-6 bg-white rounded-lg shadow-lg w-80 dark:bg-vdp modal-bg-and-borders">
+      <div class="text-center">
         <h2 class="text-xl font-medium mb-2 text-vls2 dark:text-vds">Choose Edit Type</h2>
         <p class="mb-4 text-sm font-normal text-vls2 dark:text-vds">How would you like to edit this invoice?</p>
         <!-- Overwrite -->
@@ -642,8 +641,26 @@
               type="radio"
               value="editOverwrite"
               x-model="$store.edit.editMode"
-              class="mr-4 ml-2 text-lg text-vlp dark:text-vds" />
-            <span>Overwrite</span>
+              class="mr-6 ml-2 text-lg text-vlp dark:text-vds" />
+            <span>Edit</span>
+          </div>
+          <div class="flex items-center ml-auto">
+            <div
+              x-data="tooltip('Edit and overwrite invoice.\n Use this to correct mistakes.\n (Replaces old invoice.)')"
+              class="inline-flex items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-5">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+              </svg>
+            </div>
           </div>
         </label>
 
@@ -659,22 +676,40 @@
               type="radio"
               value="editCopy"
               x-model="$store.edit.editMode"
-              class="mr-4 ml-2 text-lg text-vlp dark:text-vds" />
-            <span>Copy Invoice</span>
+              class="mr-6 ml-2 text-lg text-vlp dark:text-vds" />
+            <span>Copy</span>
+          </div>
+          <div class="flex items-center ml-auto">
+            <div
+              x-data="tooltip('Invoice clients when they pay deposit.\n Creates new invoice with related number \n(e.g. SAM-1 → SAM-1.1).')"
+              class="inline-flex items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-5">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+              </svg>
+            </div>
           </div>
         </label>
 
-        <div class="flex justify-end gap-4">
+        <div class="flex justify-between w-full">
           <!-- Confirm/Close -->
           <button
-            @click="$store.edit.editInvoice()"
-            class="p-2 bg-vla2 text-white rounded hover:bg-vla2/90 transition text-sm active:scale-95">
-            Edit
+            @click="$store.edit.openEditModal = false; $store.edit.editMode = ''"
+            class="modal-btn-sec flex place-self-center">
+            Close
           </button>
           <button
-            @click="$store.edit.openEditModal = false; $store.edit.editMode = ''"
-            class="submit-button modal-btn-sec !p-2">
-            Close
+            @click="$store.edit.editInvoice()"
+            class="modal-btn-sec !bg-vls2 dark:!bg-vla2 hover:brightness-110 !px-2 flex place-self-center">
+            Edit
           </button>
         </div>
       </div>
@@ -875,7 +910,7 @@
       <div class="flex justify-end px-6 py-4 border-t border-vls/40">
         <button
           @click="$store.edit.addCustomItem()"
-          class="p-2 bg-vla2 text-white rounded hover:bg-vla2/90 transition text-sm active:scale-95">
+          class="modal-btn-sec !bg-vls2 dark:!bg-vla2 hover:brightness-110 !px-2 flex place-self-center">
           Add
         </button>
         <button @click="$store.edit.existingItems.showItemModal = false" class="ml-4 modal-btn-sec">Close</button>
