--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
                   </div>
                 </div>
                 <div
-                  class="absolute bottom-0 left-0 h-[3px] bg-current transition-all ease-linear"
+                  class="absolute bottom-0 left-0 h-[3px] transition-all ease-linear"
                   :class="{
                     'bg-red-500': card.type === 'error',
                     'bg-green-500': card.type === 'success',
