edit invoice working

--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -25,7 +25,7 @@
 
   <div class="flex flex-1 min-h-0">
     <!-- Invoice List on the left -->
-    <div class="flex flex-col w-[30%] overflow-hidden">
+    <div class="flex flex-col min-w-[260px] w-[30%] overflow-hidden">
       <div class="p-4 bg-vlp dark:bg-vdp shadow rounded border border-vls/40">
         <div class="w-full flex justify-between">
           <p class="mb-2 font-medium text-vls3 dark:text-vds">Invoice Book</p>
@@ -44,77 +44,70 @@
             'ring-2 dark:ring-1 ring-vls2/60 dark:bg-vdp2/40 dark:ring-vda2/50 dark:text-white shadow-md': item.id === $store.edit.activeItemId,
             'ring-1 ring-vls/40 dark:ring-0 dark:bg-vds3neu700 dark:hover:bg-vds2 dark:text-vds shadow': item.id !== $store.edit.activeItemId
           }"
-            class="mb-2 flex cursor-pointer shadow justify-between rounded p-2 text-vls2 transition-all focus:outline-none focus-visible:outline-none">
+            class="relative mb-2 flex justify-between cursor-pointer shadow rounded p-2 text-vls2 transition-all focus:outline-none focus-visible:outline-none">
+            <!-- Bookmark Icon  -->
+            <div x-data="tooltip(`${item.invoice_status}`)" class="absolute -top-0.5 right-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                class="size-4"
+                :class="{
+                  'text-vla2/80 dark:text-vla2': item.invoice_status === 'paid',
+                  'text-red-500/80': item.invoice_status === 'unpaid',
+                  'text-yellow-300 dark:text-yellow-400/70': item.invoice_status === 'partially paid'
+                }">
+                <path
+                  fill-rule="evenodd"
+                  d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+
+            <!-- Invoice Info -->
             <div class="mr-2 flex flex-col text-left text-xs">
               <div x-text="item.client_name"></div>
-              <!-- Invoice date -->
               <div x-text="item.date" class="mt-1"></div>
-              <!-- Invoice Nubmer -->
               <div class="flex text-xs mt-1" x-text="item.invoice_number"></div>
             </div>
-            <div class="flex flex-col justify-between h-full">
-              <div class="flex justify-end items-center gap-4">
-                <!-- Toggle -->
-                <div x-data="{ switchOn: item.invoice_status === 'paid' }" class="flex self-start">
-                  <input :id="'toggleId-' + item.id" type="checkbox" name="switch" class="hidden" :checked="switchOn" />
-                  <button
-                    x-ref="switchButton"
-                    type="button"
-                    @click="switchOn = !switchOn; 
-                    $store.edit.updatePaid(item.id, switchOn);  
-                    switchOn ? callSuccess('Invoice changed to paid') : callInfo('Invoice changed to unpaid');
-                    $event.stopPropagation(); "
-                    :class="switchOn ? 'bg-vla2 dark:bg-vda2/80' : 'bg-vlp3 dark:bg-vds3light '"
-                    class="relative inline-flex h-5 py-0.5 ml-4 focus:outline-none rounded-full w-9"
-                    x-cloak>
-                    <span
-                      :class="switchOn ? 'translate-x-[18px]' : 'translate-x-0.5'"
-                      class="w-4 h-4 duration-200 ease-in-out bg-white dark:bg-vdp3 rounded-full shadow-md"></span>
-                  </button>
-                  <label
-                    :for="`toggleId-${item.id}`"
-                    @click="$refs.switchButton.click(); $refs.switchButton.focus(); $event.stopPropagation()"
-                    :id="$id('switch')"
-                    class="text-sm select-none"
-                    x-cloak></label>
-                </div>
-              </div>
-              <div class="flex justify-end items-center mt-3">
-                <div class="flex gap-4 items-center">
-                  <div x-show="item && item.deposit_value > 0">
-                    <div
-                      x-data="tooltip('Use after deposit payment to invoice \nthe remaining balance.\n Creates new invoice with related number \n(e.g. S.A.M.-1 → S.A.M.-1.1).')"
-                      class="">
-                      <button class="table-interaction-icon-red hover:!text-vla" @click="$event.stopPropagation()">
-                        <svg class="size-4">
-                          <use href="/icons/icons.svg#cash-bill" />
-                        </svg>
-                      </button>
-                    </div>
-                  </div>
 
-                  <div
-                    x-data="tooltip(`Subtotal: £${item.subtotal}
-                      VAT (${item.vat_percent}%): £${item.vat}
-                      Discount: ${item.discount_type === 1 ? item.discVal_ifPercent + '%' : '£' + item.discount_value}
-                      Total: £${item.total}
-                      Deposit: ${item.deposit_type === 1 ? item.depoVal_ifPercent + '%' : '£' + item.deposit_value}`)"
-                    @click="$event.stopPropagation()"
-                    class="table-interaction-icon-blue">
-                    <svg class="size-4">
-                      <use href="/icons/icons2.svg#deets-ic" />
-                    </svg>
-                  </div>
-
+            <!-- Bottom Icons (Aligned to Bottom) -->
+            <div class="flex justify-end items-end mt-auto pt-2">
+              <!-- Deposit Icon -->
+              <div x-show="item.deposit_value > 0">
+                <div x-data="tooltip('Contains a deposit')">
                   <button
-                    class="table-interaction-icon-red"
-                    @click="$store.edit.deleteInvoice(item.id); $event.stopPropagation()">
+                    class="table-interaction-icon-red !scale-100 hover:!text-vla"
+                    @click="$event.stopPropagation()">
                     <svg class="size-4">
-                      <use href="/icons/icons.svg#trash" />
+                      <use href="/icons/icons.svg#cash-bill" />
                     </svg>
                   </button>
                 </div>
               </div>
+
+              <!-- Details Icon -->
+              <div
+                x-data="tooltip(`Subtotal: £${item.subtotal}
+                    VAT (${item.vat_percent}%): £${item.vat}
+                    Discount: ${item.discount_type === 1 ? item.discVal_ifPercent + '%' : '£' + item.discount_value}
+                    Total: £${item.total}
+                    Deposit: ${item.deposit_type === 1 ? item.depoVal_ifPercent + '%' : '£' + item.deposit_value}`)"
+                @click="$event.stopPropagation()"
+                class="table-interaction-icon-blue !scale-100">
+                <svg class="size-4">
+                  <use href="/icons/icons2.svg#deets-ic" />
+                </svg>
+              </div>
+
+              <!-- Delete Button -->
+              <button
+                class="table-interaction-icon-red"
+                @click="$store.edit.deleteInvoice(item.id); $event.stopPropagation()">
+                <svg class="size-4">
+                  <use href="/icons/icons.svg#trash" />
+                </svg>
+              </button>
             </div>
           </div>
         </template>
